# todo-list

./: .gitignore  justfile  main.py  pyproject.toml
src/: main.py
src/config/: settings.py
src/routers/: todo.py
src/schemas/: todo.py
