[project]
name = "todo-list"
version = "0.1.0"
description = ""
authors = [
    {name = "JlwxdQueen",email = "jlwxd@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi", "uvicorn", "pydantic-settings (>=2.11.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "todo_list", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
