[project]
name = "todo-list"
version = "0.1.0"
description = ""
authors = [
    {name = "JlwxdQueen",email = "jlwxd@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic-settings (>=2.11.0,<3.0.0)",
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)"
]

[tool.poetry]
packages = [{include = "todo_list", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''
